--- a/Vs_Test/Vs_Test.vcxproj
+++ b/Vs_Test/Vs_Test.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="asyncTest.cpp" />
     <ClCompile Include="Atomic_Test.cpp" />
     <ClCompile Include="Condition_Var_Test.cpp" />
+    <ClCompile Include="FuncTest.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mutex_Lock_Test.cpp" />
     <ClCompile Include="Packaged_TaskTest.cpp" />
@@ -91,6 +92,7 @@
     <ClInclude Include="asyncTest.h" />
     <ClInclude Include="Atomic_Test.h" />
     <ClInclude Include="Condition_Var_Test.h" />
+    <ClInclude Include="FuncTest.h" />
     <ClInclude Include="Mutex_Lock_Test.h" />
     <ClInclude Include="Packaged_TaskTest.h" />
     <ClInclude Include="PromiseTest.h" />
