--- a/Vs_Test/Vs_Test.vcxproj.filters
+++ b/Vs_Test/Vs_Test.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Atomic_Test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="FuncTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="asyncTest.h">
@@ -63,6 +66,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Atomic_Test.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FuncTest.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
